--- a/resty/nginx.conf
+++ b/resty/nginx.conf
@@ -12,10 +12,11 @@ http {
 
     keepalive_timeout  65;
 
- init_by_lua_block {
- local  city = require("resty.ipdb.city")
- ipdb = city:new("/home/frk/city.free.ipdb")
-}
+        init_by_lua_block {
+                 local  city = require("resty.ipdb.city")
+                 ipdb = city:new("/home/frk/city.free.ipdb")
+                cjson = require("cjson")
+        }
 
  server {
         listen 8080;
@@ -24,8 +25,7 @@ http {
             default_type application/json;
             content_by_lua '
                 local args = ngx.req.get_uri_args();
-	        local loc = ipdb:find(args["ip"], "CN");
-                local cjson = require("cjson");
+	  local loc = ipdb:find(args["ip"], "CN");
                 ngx.say(cjson.encode(loc));
             ';
         }
